@@ -230,6 +230,8 @@ find_script_hash (systemtap_session& s, const string& script)
   h.add("Omit Werror (undocumented): ", s.omit_werror);
   h.add("Error suppression (--suppress-handler-errors): ", s.suppress_handler_errors);
   h.add("Suppress Time Limits (--suppress-time-limits): ", s.suppress_time_limits);
+  h.add("Prologue Searching (--prologue-searching[=WHEN]): ", int(s.prologue_searching_mode));
+
   for (unsigned i = 0; i < s.c_macros.size(); i++)
     h.add("Macros: ", s.c_macros[i]);
 
